@@ -229,17 +229,17 @@ public class EditProductScreen extends EditProductElement {
         // Input listing price
         long listingPrice = nextLong(MAX_PRICE);
         commonIOS.sendKeys(loc_txtWithoutVariationListingPrice, String.valueOf(listingPrice));
-        logger.info("Input without variation listing price: %,d".formatted(listingPrice));
+        logger.info("Input without variation listing price: {}", String.format("%,d", listingPrice));
 
         // Input selling price
         long sellingPrice = hasDiscount ? nextLong(Math.max(listingPrice, 1)) : listingPrice;
         commonIOS.sendKeys(loc_txtWithoutVariationSellingPrice, String.valueOf(sellingPrice));
-        logger.info("Input without variation selling price: %,d".formatted(sellingPrice));
+        logger.info("Input without variation selling price: {}", String.format("%,d", sellingPrice));
 
         // Input cost price
         long costPrice = hasCostPrice ? nextLong(Math.max(sellingPrice, 1)) : 0;
         commonIOS.sendKeys(loc_txtWithoutVariationCostPrice, String.valueOf(costPrice));
-        logger.info("Input without variation cost price: %,d".formatted(costPrice));
+        logger.info("Input without variation cost price: {}", String.format("%,d", costPrice));
 
         // Get new product price
         productInfo.setProductListingPrice(List.of(listingPrice));
